platform-common/common-java/src/main/java/com/example/error/ErrorCode.java
package com.example.error;



public enum ErrorCode {
    RESOURCE_NOT_FOUND,
    VALIDATION_FAILED,
    INTERNAL_ERROR,
    UNAUTHORIZED,
    FORBIDDEN
}

